Bug 229081 - [abrt] crash in ktorrent-3.3.4-1.fc12: Process /usr/bin/ktorrent was killed by signal 7 (SIGBUS) [full disk]
Summary: [abrt] crash in ktorrent-3.3.4-1.fc12: Process /usr/bin/ktorrent was killed b...
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Unspecified
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 226702 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-01 23:38 UTC by Roland Wolters
Modified: 2010-03-29 18:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
A crash report (25.71 KB, text/plain)
2010-03-01 23:39 UTC, Roland Wolters
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Wolters 2010-03-01 23:38:29 UTC
Version:            (using KDE 4.3.5)
Installed from:    Fedora RPMs

abrt 1.0.7 detected a crash.

architecture: i686
Attached file: backtrace
cmdline: ktorrent --icon ktorrent -caption KTorrent
file:///tmp/Two_and_a_Half_Men_10.02.19_17-05_kabel1_25_TVOON_DE.mpg.avi.otrkey.torrent
component: ktorrent
executable: /usr/bin/ktorrent
kernel: 2.6.31.12-174.2.22.fc12.i686
package: ktorrent-3.3.4-1.fc12
rating: 4
reason: Process /usr/bin/ktorrent was killed by signal 7 (SIGBUS)
release: Fedora release 12 (Constantine)

How to reproduce
-----
1) normal download
2) when harddisk is full ktorrent crashes
3) after freeing some space ktorrent starts as normal and downloads again :)
Comment 1 Roland Wolters 2010-03-01 23:39:29 UTC
Created attachment 41247 [details]
A crash report
Comment 2 Roland Wolters 2010-03-01 23:43:56 UTC
Forgot to add: this stream was originally filled at the Fedora bugzilla:
https://bugzilla.redhat.com/show_bug.cgi?id=569193
Comment 3 Joris Guisson 2010-03-03 20:02:40 UTC
SVN commit 1098458 by guisson:

Before mapping a piece, use posix_fallocate to ensure that we can't get a SIGBUS when the disk is full. Upon failure the torrent will be gracefully stopped.

BUG: 229081

 M  +1 -0      ChangeLog  
 M  +15 -0     libbtcore/diskio/cachefile.cpp  
 M  +1 -0      libbtcore/diskio/cachefile.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1098458
Comment 4 Joris Guisson 2010-03-29 18:12:20 UTC
*** Bug 226702 has been marked as a duplicate of this bug. ***