Before mapping a piece, use posix_fallocate to ensure that we can't get a SIGBUS when the disk is full. Upon failure the torrent will be gracefully stopped.

BUG: 229081

svn path=/trunk/extragear/network/ktorrent/; revision=1098458